AAAAAARGHGHHHH Added boolean operations